Fixed images blurring when transform was applied

--- a/halvening-website/src/App.css
+++ b/halvening-website/src/App.css
@@ -39,7 +39,6 @@ html, body{
 }
 
 .Game-body {
-  height: 100%;
   font-family: 'Titillium Web', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
